<resources>
    <string name="app_name">LIBG Mobile</string>
    <string name="mat_khau">Mật Khẩu</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="dang_nhap_thanh_cong">Đăng nhập thành công</string>
    <string name="dang_nhap_that_bai">Đăng nhập thất bại</string>
    <string name="email_hoac_mat_khau_khong_duoc_de_trong">Email hoặc mật khẩu không được để trống</string>
    <string name="ten">Tên</string>
    <string name="ma_sv">Mã sinh viên</string>
    <string name="email">Email</string>
    <string name="sdt">Số điện thoại</string>
    <string name="gioi_tinh">Giới tính</string>
    <string name="forgot_password">Quên mật Khẩu?</string>
    <string name="doi_mat_khau">Đổi mật khẩu</string>
    <string name="home">Trang chủ</string>
    <string name="account">Tài khoản</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_or_password_is_wrong">Email hoặc mật khẩu không chính xác</string>
    <string name="name_book">Tên sách</string>
    <string name="author">Tác giả</string>
    <string name="description">Mô tả</string>
    <string name="price">Giá</string>
    <string name="rating">Đánh giá</string>
    <string name="book_card_detail_transition_name">book card detail transition name</string>
    <string name="info_user">Thông tin tài khoản</string>
    <string name="saved_list">Danh sách đã lưu</string>
    <string name="history_book">Lịch sử mượn sách</string>
    <string name="feedback">Phản hồi</string>
    <string name="help">Trợ giúp</string>
    <string name="about">Về ứng dụng</string>
    <string name="back">back</string>
    <string name="search">Tìm kiếm</string>
    <string name="search_book">Tìm kiếm sách</string>
    <string name="comment">Bình luận</string>
    <string name="no_comment">Chưa có bình luận</string>
    <string name="name">Tên</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="logout">Đăng xuất\n</string>
    <string name="mat_khau_that_bai">Đổi mật khẩu thật bại</string>
    <string name="old_password">Mật khẩu hiện tại</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="confirm_password">Xác nhận lại mật khẩu</string>
    <string name="password_changed">Thay đổi mật khẩu thành công</string>
    <string name="password_not_match">Mật khẩu mới không khớp</string>
    <string name="old_password_not_match">Sai mật khẩu cũ</string>
    <string name="phone_changed">Số điện thoại đã thay đổi</string>
    <string name="phone_not_valible">Số điện thoại không hợp lệ</string>
    <string name="add_book">Thêm Sách</string>
    <string name="add">Thêm</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="delete">Xoá</string>
    <string name="are_you_sure_you_want_to_delete_this_book">"Bạn có chắc chắn muốn xoá Sách "</string>
    <string name="delete_book">Xoá sách</string>
    <string name="call_card">Phiếu mượn sách</string>
    <string name="call_card_all_number">Mã phiếu mượn</string>
    <string name="book_id">Mã sách</string>
    <string name="day_borrow">Ngày mượn</string>
    <string name="due_day">Hạn trả</string>
    <string name="cancel">Huỷ</string>
    <string name="confirm">Xác nhận</string>
    <string name="call_card_list">Phiếu mượn</string>
    <string name="pending">Chờ duyệt</string>
    <string name="unpaid">Trả sách</string>
    <string name="all">Tất cả</string>
    <string name="call_card_detail">Thông tin phiếu mượn</string>
    <string name="confirm_book">Xác nhận trả sách</string>
    <string name="day_return">Ngày trả</string>
    <string name="history">Lịch sử mượn sách</string>
    <string name="release">Năm xuất bản</string>
    <string name="publisher">Nhà xuất bản</string>
</resources>