<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/btnInfoUser"
            style="@style/parent"
            android:layout_marginBottom="3dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="9dp"
                android:text="@string/info_user"
                android:textSize="24sp"
                app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btnSaveList"
            style="@style/parent"
            android:layout_marginBottom="3dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="9dp"
                android:text="@string/saved_list"
                android:textSize="24sp"
                app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btnHistory"
            style="@style/parent"
            android:layout_marginBottom="3dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="9dp"
                android:text="@string/history_book"
                android:textSize="24sp"
                app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btnHelp"
            style="@style/parent"
            android:layout_marginBottom="3dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="9dp"
                android:text="@string/help"
                android:textSize="24sp"
                app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btnFeedback"
            style="@style/parent"
            android:layout_marginBottom="3dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="9dp"
                android:text="@string/feedback"
                android:textSize="24sp"
                app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btnAbout"
            style="@style/parent"
            android:layout_marginBottom="3dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="9dp"
                android:text="@string/about"
                android:textSize="24sp"
                app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.cardview.widget.CardView>